--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.11",
     "bootstrap": "^5.0.2",
     "chartjs": "^0.3.24",
     "import": "0.0.6",
