--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.11",
     "bootstrap": "^5.0.2",
+    "chart.js": "^3.5.0",
     "chartjs": "^0.3.24",
+    "google-maps-react": "^2.0.6",
     "import": "0.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-chartjs-2": "^3.0.3",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
