--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-search-box": "^2.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
