--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.12",
+    "axios": "^0.21.4",
     "bootstrap": "^5.0.2",
     "chart.js": "^3.5.0",
     "chartjs": "^0.3.24",
