--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-search-box": "^2.0.2",
+    "react-star-rating-component": "^1.4.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
