--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "import": "0.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
+    "react-bootstrap-floating-label": "^1.6.0",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
