--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.0.2",
     "chart.js": "^3.5.0",
     "chartjs": "^0.3.24",
+    "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "import": "0.0.6",
     "react": "^17.0.2",
