--- a/apikey.env
+++ b/apikey.env
@@ -1,1 +1,3 @@
-REACT_APP_API_KEY_MAP= "AIzaSyC4avBeOZV9CvBnJh7aF7oIEqZ14GCnc1U"
+SKIP_PREFLIGHT_CHECK=true;
+
+REACT_APP_API_KEY_MAP= "AIzaSyC4avBeOZV9CvBnJh7aF7oIEqZ14GCnc1U";
