--- a/package.json
+++ b/package.json
@@ -12,21 +12,31 @@
     "bootstrap": "^5.0.2",
     "chart.js": "^3.5.0",
     "chartjs": "^0.3.24",
+    "formik": "^2.2.9",
     "google-map-react": "^2.1.10",
     "google-maps-react": "^2.0.6",
     "import": "0.0.6",
+    "jwt-decode": "^3.1.2",
+    "query-string": "^7.0.1",
+    "querystring": "^0.2.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-floating-label": "^1.6.0",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-search-box": "^2.0.2",
     "react-star-rating-component": "^1.4.1",
     "react-tabs": "^3.2.2",
-    "web-vitals": "^1.0.1"
+    "react-toastify": "^8.0.3",
+    "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
+    "typescript": "^4.4.3",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
